# tracing-fmt-smart-writer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: android.rs  lib.rs  stdio.rs  web.rs
